# OSU_Coursework

./: .gitignore  .gitmodules  README.md
CS534/: .#ex2.txt  ex2.txt
CS534/HW1/code/: data_reader.py  experiment.py  main.py  perceptron.py
CS534/HW1/code/HW1.egg-info/: PKG-INFO  SOURCES.txt
CS534/HW1/code/algs/: mira.py  perceptron.py
CS534/HW1/results/: eric.txt
CS534/HW3/hw3-data/: debrief.txt  dev.lower.unk.best  tagger.py  test.lower.unk.best  trainer.py
Rob537/HW1/HW1/: HW1.cabal  README.md
Rob537/HW1/HW1/app/: Main.hs
Rob537/HW1/HW1/src/: CSVMatrixParser.hs  Lib.hs  Net.hs
Rob537/HW2/: plotpoints.m
Rob537/HW2/HW2/: HW2.cabal  stack.yaml
Rob537/HW2/HW2/app/: Main.hs
Rob537/HW2/HW2/src/: Lib.hs
Rob537/HW2/__MACOSX/hw2.data/: ._25cities.csv
Rob537/HW2/hw2.data/: 25cities.csv  25cities_A.csv
Rob537/HW3/HW3/: HW3.cabal  stack.yaml
Rob537/HW3/HW3/app/: Main.hs
Rob537/HW3/HW3/src/: Lib.hs
