name:                HW2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eklinkhammer/HW2#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Klinkhammer
maintainer:          eklinkhammer@gmail.com
copyright:           2017 Eric Klinkhammer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , random-shuffle
                     , random
                     , vector
                     , cassava
                     , bytestring
                     , mtl
  default-language:    Haskell2010

executable HW2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HW2
                     , vector
  default-language:    Haskell2010

test-suite HW2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HW2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eklinkhammer/HW2
